website/versioned_docs/version-0.7.0-rc13/cli-reference/gitops_upgrade.md
## gitops upgrade

Upgrade to Weave GitOps Enterprise

```
gitops upgrade [flags]
```

### Examples

```
  # Upgrade Weave GitOps in the flux-system namespace
  gitops upgrade --version 0.0.17 --config-repo https://github.com/my-org/my-management-cluster.git

  # Upgrade Weave GitOps and set the natsURL
  gitops upgrade --version 0.0.17 --set "agentTemplate.natsURL=my-cluster.acme.org:4222" \
    --config-repo https://github.com/my-org/my-management-cluster.git
```

### Options

```
      --base string             The base branch to open the pull request against
      --branch string           The branch to create the pull request from (default "tier-upgrade-enterprise")
      --commit-message string   The commit message (default "Upgrade to WGE")
      --config-repo string      URL of external repository that will hold automation manifests
      --dry-run                 Output the generated profile without creating a pull request
  -h, --help                    help for upgrade
      --path string             The path within the Git repository containing files for the current cluster
      --set stringArray         set profile values on the command line (can specify multiple or separate values with commas: key1=val1,key2=val2)
      --version string          Version of Weave GitOps Enterprise to be installed
```

### Options inherited from parent commands

```
  -e, --endpoint string            The Weave GitOps Enterprise HTTP API endpoint
      --insecure-skip-tls-verify   If true, the server's certificate will not be checked for validity. This will make your HTTPS connections insecure
      --namespace string           The namespace scope for this operation (default "flux-system")
  -v, --verbose                    Enable verbose output
```

### SEE ALSO

* [gitops](gitops.md)	 - Weave GitOps

###### Auto generated by spf13/cobra on 12-Apr-2022
